--- a/index.html
+++ b/index.html
@@ -62,22 +62,30 @@
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-cloud-download"></i></div>
-                                <h2 class="fs-4 fw-bold">Free to download</h2>
-                                <p class="mb-0">As always, Start Bootstrap has a powerful collectin of free templates.</p>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
+                                    <a href="https://www.wireshark.org/" target="_blank">
+                                        <img src="/assets/wire_shark.jpg" alt="wireshark" width="250px" height="120px" />
+                                    </a>
+                                </div>
+                                <h2 class="fs-4 fw-bold">Wireshark</h2>
+                                <p class="mb-0">a free, open-source tool that lets you capture and analyze network traffic. You can use it to troubleshoot, monitor, or learn about network protocols, such as TCP/IP, HTTP, DNS, and more. </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-card-heading"></i></div>
-                                <h2 class="fs-4 fw-bold">Jumbotron hero header</h2>
-                                <p class="mb-0">The heroic part of this template is the jumbotron hero header!</p>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
+                                    <a href="https://www.netresec.com/?page=NetworkMiner" target="_blank">
+                                        <img src="/assets/Netresec_Logo.png" alt="wireshark" width="250px" height="120px" />
+                                    </a>
+                                </div>
+                                <h2 class="fs-4 fw-bold">Network Miner</h2>
+                                <p class="mb-0">NetworkMiner is an open source network forensics tool that extracts artifacts, such as files, images, emails and passwords, from captured network traffic in PCAP files.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xxl-4 mb-5">
+                    <!-- <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-bootstrap"></i></div>
@@ -103,7 +111,7 @@
                                 <p class="mb-0">Start Bootstrap has been the leader in free Bootstrap templates since 2013!</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
